Remove black square from chapter header

--- a/belaveshkin.sty
+++ b/belaveshkin.sty
@@ -141,8 +141,8 @@
     \flushright\makebox[0pt][r]{%
       \normalfont\LARGE\MakeUppercase{\@chapapp}%
       \resizebox{!}{18mm}{\chapnumfont \thechapter }%
-      \hspace{.8em}%
-      \rule{\midchapskip}{\beforechapskip}\hspace{-\midchapskip}%
+      % \hspace{.8em}%
+      % \rule{\midchapskip}{\beforechapskip}\hspace{-\midchapskip}%
     }}%
   \makeoddfoot{plain}{}{\thepage}{}%
   \makeevenfoot{plain}{}{\thepage}{}%
