--- a/willpower.tex
+++ b/willpower.tex
@@ -1,7 +1,9 @@
-\documentclass[ebook,10pt,openany]{memoir}
+\documentclass[letterpaper,10pt,openany,twocolumn]{memoir}
 
 \usepackage{belaveshkin}
-
+\textwidth=7 true in
+\textheight=9 true in
+\setcolsepandrule{0.35in}{0pt}
 \addto\captionsbelarusian{\renewcommand{\chaptername}{Разьдзел}} 
 \renewcommand*{\cftchaptername}{Разьдзел }
 \makeatletter
@@ -15,14 +17,14 @@
 % \includeonly{willpower/chapter6}
 
 \begin{document}%
-\CoverPic{willpower/cover.png}
+% \CoverPic{willpower/cover.png}
 
-\cleartooddpage
+% \cleartooddpage
 \begin{titlingpage}
   \TitlePageFormat{Андрусь\ \ Белавешкін}
       {Воля\ \ да\ \ жыцьця}
       {дапаможнік\ \ па\ \ усьвядомленным\ \ здароўі}
-      {2020, Пераклад 2022}
+      {2019, Пераклад 2024}
 
 \end{titlingpage}
 
