--- a/willpower.tex
+++ b/willpower.tex
@@ -1,9 +1,11 @@
 \documentclass[letterpaper,10pt,openany,twocolumn]{memoir}
 
 \usepackage{belaveshkin}
+\stockwidth=8.25in
 \textwidth=6.75 true in
 \textheight=9 true in
 \setcolsepandrule{0.35in}{0pt}
+% \flushbottom
 \addto\captionsbelarusian{\renewcommand{\chaptername}{Разьдзел}} 
 \renewcommand*{\cftchaptername}{Разьдзел }
 \makeatletter
@@ -14,7 +16,7 @@
 \title{Воля да жыцьця}
 \date{2020 Пераклад 2022}
 
-% \includeonly{willpower/chapter9}
+% \includeonly{willpower/chapter10}
 
 \begin{document}%
 % \CoverPic{willpower/cover.png}
