Format chapter 11 of willpower

--- a/willpower/chapter4.tex
+++ b/willpower/chapter4.tex
@@ -497,7 +497,7 @@
 
 Добрай крыніцай бялку зьяўляецца мяса жывёл пашавага выпасу, вельмі карысныя морапрадукты і марская рыба, яйкі. Кампэнсаваць зьніжэньне жывёльнага бялку можна павелічэньнем расьліннага. Чырвонае мяса варта ўжываць не часьцей за 2--3 разы на тыдзень, варта дадаваць у~рацыён субпрадукты і болей белага мяса (птушка). Марскую рыбу рэкамэндуецца таксама есьці 2--3 разы на тыдзень. Самай частай рыбай у~нашым рацыёне зьяўляецца скумбрыя (цэльная, глыбокай замарозкі). Абумоўлена гэта цэлым шэрагам прычынаў: гэта рыба дзікае лоўлі, напрыклад нарвэская скумбрыя даяжджае ў~добрым стане, у~ёй адносна невялікая колькасьць костак, таму яе лёгка есьці дзецям.
 
-\emph{Звычайна я зьядаю сярэднюю скумбрыю (350 г) за раз, гэта дае порцыю адварной скумбрыі ў~250 г. Што гэта значыць на мове лічбаў? Такім чынам, адна скумбрыя~--- гэта 550 ккал, зь іх 50 грамаў адборнага бялку, 36 грамаў выдатнага тлушчу. А таксама 129 мкг селену (больш за 200\,\% ад патрэбы ў~содні), 135 мкг ёду (амаль поўная содневая патрэба), 3,6 г Амэга-3 тлустых кіслотаў. Як бачыце, пры 2--3 порцыях рыбы на тыдзень няма ніякай неабходнасьці ў~прыёме дадатковых дабавак.}
+\emph{Звычайна я зьядаю сярэднюю скумбрыю (350 г) за раз, гэта дае порцыю адварной скумбрыі ў~250 г. Што гэта значыць на мове лічбаў? Такім чынам, адна скумбрыя~--- гэта 550 ккал, зь іх 50 грамаў адборнага бялку, 36 грамаў выдатнага тлушчу. А таксама 129\,мкг селену (больш за 200\,\% ад патрэбы ў~содні), 135\,мкг ёду (амаль поўная содневая патрэба), 3,6 г Амэга-3 тлустых кіслотаў. Як бачыце, пры 2--3 порцыях рыбы на тыдзень няма ніякай неабходнасьці ў~прыёме дадатковых дабавак.}
 
 Рыбны бялок прыкметна адрозьніваецца ад чырвонага і белага мяса, ён валодае даведзеным антыгіпэртэнзіўным эфэктам, стымулюе фібрыноліз, спрыяе зьніжэньню вагі і зьніжае ўзровень С-рэактыўнага бялку, паляпшае адчувальнасьць да інсуліну. 
 
